dnl Process this file with autoconf to produce a configure script.

AC_INIT(yatm.cc)
AC_CONFIG_AUX_DIR(config)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(yatm, 0.6)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CXX

dnl Checks for libraries.
XIPH_PATH_AO(,AC_MSG_ERROR(libao not found!))
XIPH_PATH_OGG(,AC_MSG_ERROR(Ogg needed!))
XIPH_PATH_VORBIS(,AC_MSG_ERROR(Vorbis needed!))

AC_CHECK_LIB([slang], [SLang_init_tty], , [AC_MSG_ERROR([SLang required.])])
PKG_CHECK_MODULES(DSP, mad sndfile)
AC_SUBST(NON_PKG_LIBS)
dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h string.h fcntl.h signal.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
